バグを修正してe2eテストを追加する
