# backend/api/oas_client_gen.go
@@ -39,6 +39,12 @@ type Invoker interface {
 	//
 	// GET /api/{secret}
 	GetChannelInfo(ctx context.Context, params GetChannelInfoParams) (*ChannelInfoResponse, error)
+	// GetDownload invokes getDownload operation.
+	//
+	// ダウンロード情報を取得.
+	//
+	// GET /api/{secret}/downloads/{id}
+	GetDownload(ctx context.Context, params GetDownloadParams) (*Download, error)
 	// ListDownloads invokes listDownloads operation.
 	//
 	// ダウンロード一覧を取得.
@@ -267,6 +273,117 @@ func (c *Client) sendGetChannelInfo(ctx context.Context, params GetChannelInfoPa
 
 	stage = "DecodeResponse"
 	result, err := decodeGetChannelInfoResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// GetDownload invokes getDownload operation.
+//
+// ダウンロード情報を取得.
+//
+// GET /api/{secret}/downloads/{id}
+func (c *Client) GetDownload(ctx context.Context, params GetDownloadParams) (*Download, error) {
+	res, err := c.sendGetDownload(ctx, params)
+	return res, err
+}
+
+func (c *Client) sendGetDownload(ctx context.Context, params GetDownloadParams) (res *Download, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("getDownload"),
+		semconv.HTTPRequestMethodKey.String("GET"),
+		semconv.URLTemplateKey.String("/api/{secret}/downloads/{id}"),
+	}
+	otelAttrs = append(otelAttrs, c.cfg.Attributes...)
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, GetDownloadOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [4]string
+	pathParts[0] = "/api/"
+	{
+		// Encode "secret" parameter.
+		e := uri.NewPathEncoder(uri.PathEncoderConfig{
+			Param:   "secret",
+			Style:   uri.PathStyleSimple,
+			Explode: false,
+		})
+		if err := func() error {
+			return e.EncodeValue(conv.StringToString(params.Secret))
+		}(); err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		encoded, err := e.Result()
+		if err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		pathParts[1] = encoded
+	}
+	pathParts[2] = "/downloads/"
+	{
+		// Encode "id" parameter.
+		e := uri.NewPathEncoder(uri.PathEncoderConfig{
+			Param:   "id",
+			Style:   uri.PathStyleSimple,
+			Explode: false,
+		})
+		if err := func() error {
+			return e.EncodeValue(conv.StringToString(params.ID))
+		}(); err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		encoded, err := e.Result()
+		if err != nil {
+			return res, errors.Wrap(err, "encode path")
+		}
+		pathParts[3] = encoded
+	}
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	body := resp.Body
+	defer body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeGetDownloadResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
