# backend/api/oas_response_encoders_gen.go
@@ -40,6 +40,20 @@ func encodeGetChannelInfoResponse(response *ChannelInfoResponse, w http.Response
 	return nil
 }
 
+func encodeGetDownloadResponse(response *Download, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeListDownloadsResponse(response *DownloadListResponse, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
