# spec/tsp-output/@typespec/openapi3/openapi.yaml
@@ -78,6 +78,34 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/CreateDownloadRequest'
+  /api/{secret}/downloads/{id}:
+    get:
+      operationId: getDownload
+      description: ダウンロード情報を取得
+      parameters:
+        - name: secret
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The request has succeeded.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Download'
+        default:
+          description: An unexpected error response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
     ChannelInfoResponse:
